--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ homepage      = "https://funnisimo.github.io/conapp/index.html"
 uni-gl      = "0.2"
 lazy_static = "1.4.0"
 winit       = "0.27.5"
+# uni-app = { path = "../uni-app" }
 
 [dependencies.image]
 version          = "0.24"
