--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,28 @@
 [package]
-name          = "conapp"
-version       = "0.1.0"
-authors       = ["Funnisimo <nospam@gmail.com>"]
-description   = "Pure rust OpenGL accelerated roguelike console API with native/wasm support"
-license       = "MIT"
-edition       = "2021"
+name = "conapp"
+version = "0.1.0"
+authors = ["Funnisimo <funnisimo@users.noreply.github.com>"]
+description = "Pure rust OpenGL accelerated roguelike console API with native/wasm support"
+license = "MIT"
+edition = "2021"
 documentation = "https://docs.rs/conapp"
-repository    = "https://github.com/funnisimo/conapp"
-keywords      = ["roguelike", "console", "opengl", "wasm"]
-homepage      = "https://funnisimo.github.io/conapp/index.html"
+repository = "https://github.com/funnisimo/conapp"
+keywords = [
+    "roguelike",
+    "console",
+    "opengl",
+    "wasm",
+    "terminal",
+    "ascii",
+    "cp437",
+]
+homepage = "https://github.com/funnisimo/conapp"
+readme = "README.md"
 
 [dependencies]
 uni-gl      = "0.2"
 lazy_static = "1.4.0"
 winit       = "0.27.5"
-# uni-app = { path = "../uni-app" }
 
 [dependencies.image]
 version          = "0.24"
