--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ keywords = [
 homepage = "https://github.com/funnisimo/conapp"
 readme = "README.md"
 
+# [features]
+# default = ["ecs"]
+# ecs     = ["dep:legion"]
+
 [dependencies]
 uni-gl      = "0.2"
 lazy_static = "1.4.0"
@@ -63,6 +67,9 @@ web-sys = { version = "0.3.60", features = [
     "XmlHttpRequest",
     "XmlHttpRequestResponseType",
 ] }
+# legion = { version = "0.4", optional = true, default-features = false, features = [
+#     "wasm-bindgen",
+# ] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 glutin = "0.29.1"
@@ -72,3 +79,4 @@ winapi = { version = "0.3.9", features = [
     "winbase",
     "errhandlingapi",
 ] }
+# legion = { version = "0.4", optional = true, default-features = false }
