--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,9 @@ web-sys = { version = "0.3.60", features = [
 # ] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-glutin = "0.29.1"
+glutin            = "0.30"
+glutin-winit      = "0.2"
+raw-window-handle = "0.5"
 # fix for missing features in rust 2021 (https://doc.rust-lang.org/nightly/edition-guide/rust-2021/default-cargo-resolver.html)
 winapi = { version = "0.3.9", features = [
     "winerror",
